# noir

./: .cirrus.yml  .gitignore  Makefile  README.md  pyoxidizer.bzl  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  tests.yml
noir/: _patch.py  cli.py  ctx.py  templating.py  types.py  utils.py
tests/: test_cli.py  test_render.py  test_template_ctx.py
tests/assets/: ctx.env  ctx.toml  nginx.ns.tpl  nginx.osenv.tpl  nginx.var.tpl
