[tool.poetry]
name = "noir"
version = "0.1.0"
description = "CLI interface to Renoir templating engine"
authors = ["Giovanni Barillari <gi0baro@d4net.org>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
noir = "noir.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

click = "~7.1.2"
crashtest = "~0.3.1"
pyyaml = "~5.3.1"
renoir = "~1.3.2"
tomlkit = "~0.7.0"

[tool.poetry.dev-dependencies]
mypy = "0.812"
pylint = "~2.7.4"
pytest = "~6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
