[tool.poetry]
name = "noir"
version = "0.6.0"
description = "CLI to Renoir templating engine"
authors = ["Giovanni Barillari <gi0baro@d4net.org>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
noir = "noir.cli:app"

[tool.poetry.dependencies]
python = "~3.10"

crashtest = "0.3.1"
pyyaml = "5.3.1"
renoir = "1.7.1"
tomli = "2.0.1"
tomli-w = "1.0.0"
typer = "0.7.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2.3"

[build-system]
requires = ["poetry-core==1.4.0"]
build-backend = "poetry.core.masonry.api"
